# hyprwire

./: .gitignore  CMakeLists.txt  README.md  flake.nix
.github/workflows/: nix.yml
include/hyprwire/: hyprwire.hpp
include/hyprwire/core/: ClientSocket.hpp  ServerSocket.hpp
include/hyprwire/core/implementation/: ClientImpl.hpp  Object.hpp  ServerImpl.hpp  Types.hpp
include/hyprwire/core/types/: MessageMagic.hpp
nix/: default.nix  overlays.nix
scanner/: CMakeLists.txt  hyprwire-scanner-config.cmake.in  main.cpp
src/: Macros.hpp
src/core/client/: ClientObject.cpp  ClientObject.hpp  ClientSocket.cpp  ClientSocket.hpp
src/core/implementation/: Object.cpp  Spec.cpp
src/core/message/: MessageMagic.cpp  MessageMagic.hpp  MessageParser.cpp  MessageParser.hpp  MessageType.hpp
src/core/message/messages/: BindProtocol.cpp  BindProtocol.hpp  FatalProtocolError.cpp  GenericProtocolMessage.cpp  GenericProtocolMessage.hpp  HandshakeAck.cpp  HandshakeAck.hpp  HandshakeBegin.cpp  HandshakeBegin.hpp  HandshakeProtocols.cpp  Hello.cpp  Hello.hpp  IMessage.cpp  IMessage.hpp  NewObject.cpp  RoundtripDone.cpp  RoundtripRequest.cpp
src/core/server/: ServerClient.cpp  ServerClient.hpp  ServerObject.cpp  ServerObject.hpp  ServerSocket.cpp  ServerSocket.hpp
src/core/socket/: SocketHelpers.cpp
src/core/wireObject/: IWireObject.cpp  IWireObject.hpp
src/helpers/: FFI.cpp
tests/: Client.cpp  Fork.cpp  Server.cpp  Spec.hpp  protocol-v1.xml
tests/unit/: IntegrationProtocolFilter.cpp
